fixed random choice in policy to be reasonable

--- a/Space Invaders Walkthrough.ipynb
+++ b/Space Invaders Walkthrough.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A.L.E: Arcade Learning Environment (version 0.8.1+53f58b7)\n",
+      "[Powered by Stella]\n"
+     ]
+    }
+   ],
    "source": [
     "env = gym.make(\"ALE/SpaceInvaders-v5\")#, render_mode=\"rgb_array\"\n",
     "height, width, channels = env.observation_space.shape\n",
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +85,7 @@
        "['NOOP', 'FIRE', 'RIGHT', 'LEFT', 'RIGHTFIRE', 'LEFTFIRE']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,13 +388,15 @@
     "\n",
     "                    if self.t % 1000 == 0:\n",
     "                        progress_bar.set_description(\"t = {}\".format(self.t))\n",
+    "                if episode != None:\n",
+    "                    metadata['episode'].append(episode)\n",
+    "                if reward != None:\n",
+    "                    metadata['reward'].append(total_reward.cpu())\n",
     "\n",
-    "                metadata['episode'].append(episode)\n",
-    "                metadata['reward'].append(total_reward)\n",
-    "\n",
-    "                if episode % 100 == 0 and episode != 0:\n",
-    "                    avg_return = np.mean(metadata['reward'][-100:])\n",
-    "                    print(\"Average return (last 100 episodes): {:.2f}\".format(avg_return))\n",
+    "                if episode % 20 == 0 and episode != 0:\n",
+    "                    avg_return = np.mean(metadata['reward'][-20:])\n",
+    "                    print(\"Average return (last 20 episodes): {:.2f}\".format(avg_return))\n",
+    "                    print(\"randomly guessing\",self.exploration_rate(self.t-burn_in),\"percent of the time\")\n",
     "\n",
     "                if plot:\n",
     "                    plt.scatter(metadata['episode'], metadata['reward'])\n",
@@ -409,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,11 +433,11 @@
     "frame_skip = None\n",
     "num_frames = 4\n",
     "num_actions = len(env.unwrapped.get_action_meanings())\n",
-    "episodes = 100#int(1e5)\n",
-    "memory_depth = int(1e5)\n",
+    "episodes = 1000#int(1e5)\n",
+    "memory_depth = 1000#int(1e5)\n",
     "epsilon_i = 1.0\n",
     "epsilon_f = 0.1\n",
-    "anneal_time = int(1e6)\n",
+    "anneal_time = episodes*10#int(1e6)\n",
     "burn_in = int(5e4)\n",
     "gamma = 0.99\n",
     "learning_rate = 2.5e-4"
@@ -434,18 +445,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f020717df2684431aa056bca25742fa7",
+       "model_id": "621e7c7427794930b42648413d3f0e43",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?episode/s]"
+       "  0%|          | 0/1000 [00:00<?, ?episode/s]"
       ]
      },
      "metadata": {},
@@ -456,7 +467,7 @@
     "model = DeepQNetwork(num_frames, num_actions)\n",
     "agent = Agent(model, memory_depth, learning_rate, gamma, epsilon_i, epsilon_f, anneal_time, 'ckpt')\n",
     "#env = gym.make('BreakoutDeterministic-v4')\n",
-    "metadata = agent.play(episodes, train=True, load=False)"
+    "metadata = agent.play(episodes, train=True, load=False,plot=False)"
    ]
   },
   {
