prints out random choice percentage

--- a/Space Invaders Walkthrough.ipynb
+++ b/Space Invaders Walkthrough.ipynb
@@ -185,16 +185,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x7feb0ce05280>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Transition = namedtuple('Transition', ['state', 'action', 'reward', 'terminal', 'next_state'])"
+    "Transition = namedtuple('Transition', ['state', 'action', 'reward', 'terminal', 'next_state'])\n",
+    "torch.set_grad_enabled(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +320,7 @@
     "        self.opt.step()\n",
     "\n",
     "    def play(self, episodes, train=False, load=False, plot=False, render=False, verbose=False):\n",
-    "    \n",
+    "        has_burned_in_yet = False\n",
     "        self.t = 0\n",
     "        metadata = dict(episode=[], reward=[])\n",
     "        \n",
@@ -378,6 +390,9 @@
     "                    if train and self.t > burn_in and i > batch_size:\n",
     "\n",
     "                        if self.t % update_interval == 0:\n",
+    "                            if has_burned_in_yet:\n",
+    "                                print(\"burn in phase passed, now updating weights\")\n",
+    "                                has_burned_in_yet = True\n",
     "                            self.update(batch_size)\n",
     "\n",
     "                        if self.t % clone_interval == 0:\n",
@@ -393,10 +408,10 @@
     "                if reward != None:\n",
     "                    metadata['reward'].append(total_reward.cpu())\n",
     "\n",
-    "                if episode % 20 == 0 and episode != 0:\n",
-    "                    avg_return = np.mean(metadata['reward'][-20:])\n",
-    "                    print(\"Average return (last 20 episodes): {:.2f}\".format(avg_return))\n",
-    "                    print(\"randomly guessing\",self.exploration_rate(self.t-burn_in),\"percent of the time\")\n",
+    "                if episode % 50 == 0 and episode != 0:\n",
+    "                    avg_return = np.mean(metadata['reward'][-50:])\n",
+    "                    print(\"Average return (last 50 episodes): {:.2f}\".format(avg_return))\n",
+    "                    print(\"randomly choosing action\",self.exploration_rate(self.t-burn_in)*100,\"percent of the time\")\n",
     "\n",
     "                if plot:\n",
     "                    plt.scatter(metadata['episode'], metadata['reward'])\n",
@@ -420,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,12 +448,12 @@
     "frame_skip = None\n",
     "num_frames = 4\n",
     "num_actions = len(env.unwrapped.get_action_meanings())\n",
-    "episodes = 1000#int(1e5)\n",
-    "memory_depth = 1000#int(1e5)\n",
-    "epsilon_i = 1.0\n",
+    "episodes = 2000#int(1e5)\n",
+    "memory_depth = 10000#int(1e5)\n",
+    "epsilon_i = 1\n",
     "epsilon_f = 0.1\n",
-    "anneal_time = episodes*10#int(1e6)\n",
-    "burn_in = int(5e4)\n",
+    "anneal_time = episodes*2000#int(1e6)\n",
+    "burn_in = episodes*5#int(5e4)\n",
     "gamma = 0.99\n",
     "learning_rate = 2.5e-4"
    ]
@@ -449,14 +464,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint: model-341240\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "621e7c7427794930b42648413d3f0e43",
+       "model_id": "b5794f5985684ac3a25b00dae6f3a942",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?episode/s]"
+       "  0%|          | 0/2000 [00:00<?, ?episode/s]"
       ]
      },
      "metadata": {},
@@ -467,7 +489,7 @@
     "model = DeepQNetwork(num_frames, num_actions)\n",
     "agent = Agent(model, memory_depth, learning_rate, gamma, epsilon_i, epsilon_f, anneal_time, 'ckpt')\n",
     "#env = gym.make('BreakoutDeterministic-v4')\n",
-    "metadata = agent.play(episodes, train=True, load=False,plot=False)"
+    "metadata = agent.play(episodes, train=True, load=True,plot=False)"
    ]
   },
   {
