now only taking new actions every 3 frames. batch size is 64 and weights are updated every 4 action decisions

--- a/DQL from pytorch tutorial.ipynb
+++ b/DQL from pytorch tutorial.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "47625ff3",
    "metadata": {},
    "outputs": [],
@@ -167,13 +167,13 @@
     "# EPS_DECAY controls the rate of exponential decay of epsilon, higher means a slower decay\n",
     "# TAU is the update rate of the target network\n",
     "# LR is the learning rate of the ``AdamW`` optimizer\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 64\n",
     "GAMMA = 0.99\n",
-    "EPS_START = 0.9\n",
-    "EPS_END = 0.05\n",
-    "EPS_DECAY = 1000\n",
+    "EPS_START = 1\n",
+    "EPS_END = 0.1\n",
+    "EPS_DECAY = 1000000\n",
     "TAU = 0.005\n",
-    "LR = 1e-4\n",
+    "LR = 2.5e-4\n",
     "\n",
     "# Get number of actions from gym action space\n",
     "n_actions = env.action_space.n\n",
@@ -195,8 +195,8 @@
     "def select_action(state,no_rand=False):\n",
     "    global steps_done\n",
     "    sample = random.random()\n",
-    "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-    "        math.exp(-1. * steps_done / EPS_DECAY)\n",
+    "    eps_threshold = max(EPS_END + (EPS_START - EPS_END) * \\\n",
+    "        (-1. * steps_done / EPS_DECAY), EPS_END)\n",
     "    steps_done += 1\n",
     "    if no_rand or sample > eps_threshold:\n",
     "        with torch.no_grad():\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "ca9c3291",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "59845135",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_860/2019826872.py:15: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_860/3319308737.py:15: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  progress_bar = tqdm(range(num_episodes), unit='num_episodes')\n"
      ]
@@ -354,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6422dc912d8943a991b9632bfea705e6",
+       "model_id": "b79fd5b535904f03ae6c12853502d39b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,17 +366,16 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/abell/.local/lib/python3.9/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
-      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+      "Average score (last 25 episodes): 123.60\n"
      ]
     }
    ],
    "source": [
     "####THIS IS THE MAIN TRAINING CODE\n",
-    "\n",
+    "select_action_every_N_frames = 3\n",
     "from skimage.color import rgb2gray\n",
     "from skimage.transform import rescale\n",
     "import numpy as np\n",
@@ -404,9 +403,11 @@
     "                new_frame, reward, done,truncated, info = env.step(action)\n",
     "                new_frame = preprocess(new_frame,device)\n",
     "                state = torch.cat([state, new_frame], 1)\n",
-    "\n",
-    "            #print(state.shape)                \n",
-    "            action = select_action(state)\n",
+    "            if action ==1:\n",
+    "                action = select_action(state)\n",
+    "            #print(state.shape)\n",
+    "            if itters%select_action_every_N_frames == 0:\n",
+    "                action = select_action(state)\n",
     "            observation, reward, terminated, truncated, _ = env.step(action.item())\n",
     "            new_frame = preprocess(observation,device)\n",
     "            new_state = torch.cat([state, new_frame], 1)\n",
@@ -426,7 +427,7 @@
     "            # Move to the next state\n",
     "            #tate = next_state\n",
     "            state = new_state\n",
-    "            if itters%4==0:\n",
+    "            if itters%12==0:\n",
     "                # Perform one step of the optimization (on the policy network)\n",
     "                optimize_model()\n",
     "\n",
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ca7146a5",
+   "id": "c4c10fcd",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b13040",
+   "id": "87d7a65b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -607,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55191c16",
+   "id": "05427ff6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -615,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10bf63d5",
+   "id": "27abac4f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -623,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e1ccd1",
+   "id": "9c21a458",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -631,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae99e6d0",
+   "id": "1c4bbe79",
    "metadata": {},
    "outputs": [],
    "source": []
