reverted to pytorch DQL target network update settings. added saving/loading for avg qvals and score

--- a/DQL from pytorch tutorial.ipynb
+++ b/DQL from pytorch tutorial.ipynb
@@ -33,7 +33,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "\n",
+    "import numpy as np\n",
     "env = gym.make(\"SpaceInvaders-v0\")\n",
     "\n",
     "# set up matplotlib\n",
@@ -169,14 +169,14 @@
     "# EPS_DECAY controls the rate of exponential decay of epsilon, higher means a slower decay\n",
     "# TAU is the update rate of the target network\n",
     "# LR is the learning rate of the ``AdamW`` optimizer\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 64\n",
     "GAMMA = 0.99\n",
     "EPS_START = 1\n",
     "EPS_END = 0.1\n",
     "EPS_DECAY = 1000000\n",
     "TAU = 0.005\n",
     "LR = 2.5e-4\n",
-    "UPDATE_FREQUENCY=4\n",
+    "UPDATE_FREQUENCY=8\n",
     "replay_memory_size = int(1000000/20) #must be less than original paper due to memory constraints on datahub\n",
     "replay_start_size=int(50000/20)\n",
     "UPDATE_TARGET_NET_EVERY=10000\n",
@@ -238,7 +238,10 @@
     "        means = durations_t.unfold(0, 100, 1).mean(1).view(-1)\n",
     "        means = torch.cat((torch.zeros(99), means))\n",
     "        plt.plot(means.numpy())\n",
-    "\n",
+    "        \n",
+    "    episodes = range(len(episode_durations))\n",
+    "    plt.xticks(episodes[::max(1, len(episodes)//10)])\n",
+    "    \n",
     "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
     "    if is_ipython:\n",
     "        if not show_result:\n",
@@ -261,7 +264,7 @@
     "    global target_net\n",
     "    if len(memory) < BATCH_SIZE:\n",
     "        return\n",
-    "    if num_updates%UPDATE_TARGET_NET_EVERY == 0:\n",
+    "    if 1==0 and num_updates%UPDATE_TARGET_NET_EVERY == 0:\n",
     "        try:\n",
     "            del target_net\n",
     "        except:\n",
@@ -269,6 +272,7 @@
     "        target_net = copy.deepcopy(policy_net).to(device)\n",
     "        for p in target_net.parameters():\n",
     "            p.requires_grad = False\n",
+    "            \n",
     "    transitions = memory.sample(BATCH_SIZE)\n",
     "    # Transpose the batch (see https://stackoverflow.com/a/19343/3343043 for\n",
     "    # detailed explanation). This converts batch-array of Transitions\n",
@@ -341,10 +345,14 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "def save(model, t):\n",
+    "def save(model, t,avg_qvals,rewards):\n",
     "    save_path = os.path.join('ckpt', 'model-{}'.format(t))\n",
     "    torch.save(model.state_dict(), save_path)\n",
+    "    np.savez(os.path.join('ckpt', 'graphs-{}.npz'.format(t)), avg_qvals=avg_qvals, rewards=rewards)\n",
+    "    \n",
     "def load(policy_net,ckptdir='ckpt'):\n",
+    "    global rewards\n",
+    "    global avg_qvals\n",
     "    ckpts = [file for file in os.listdir(ckptdir) if 'model' in file]\n",
     "    steps = [int(re.search('\\d+', file).group(0)) for file in ckpts]\n",
     "        \n",
@@ -354,7 +362,22 @@
     "    print(\"Loading checkpoint: {}\".format(latest_ckpt))\n",
     "        \n",
     "    policy_net.load_state_dict(torch.load(os.path.join(ckptdir, latest_ckpt)))\n",
+    "    \n",
+    "    with np.load(os.path.join(ckptdir, 'graphs-'+latest_ckpt[6:])+'.npz') as data:\n",
+    "        avg_qvals = data['avg_qvals'].tolist()\n",
+    "        rewards = data['rewards'].tolist()\n",
     "    return t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "53309ef6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rewards = []\n",
+    "avg_qvals = []"
    ]
   },
   {
@@ -367,7 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1812/3741128806.py:19: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_2144/119291110.py:17: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  progress_bar = tqdm(range(num_episodes), unit='episode')\n"
      ]
@@ -375,7 +398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4402b14f51d64193a836082a93b8d01b",
+       "model_id": "9f4a2908856b411891063b5659e1d419",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,18 +421,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average score (last 50 episodes): 121.50, avg qval: 0.23\n",
-      "Average score (last 50 episodes): 125.90, avg qval: 0.52\n",
-      "Average score (last 50 episodes): 142.80, avg qval: 0.57\n",
-      "Average score (last 50 episodes): 145.60, avg qval: 0.63\n",
-      "Average score (last 50 episodes): 138.60, avg qval: 0.68\n",
-      "Average score (last 50 episodes): 120.30, avg qval: 0.68\n",
-      "Average score (last 50 episodes): 154.00, avg qval: 0.70\n",
-      "Average score (last 50 episodes): 107.30, avg qval: 0.71\n",
-      "Average score (last 50 episodes): 114.50, avg qval: 0.75\n",
-      "Average score (last 50 episodes): 121.00, avg qval: 0.77\n",
-      "Average score (last 50 episodes): 115.60, avg qval: 0.75\n",
-      "Average score (last 50 episodes): 143.40, avg qval: 0.80\n"
+      "Average score (last 50 episodes): 141.60, avg qval: 0.48\n",
+      "Average score (last 50 episodes): 160.40, avg qval: 0.94\n",
+      "Average score (last 50 episodes): 153.60, avg qval: 1.18\n",
+      "Average score (last 50 episodes): 156.30, avg qval: 1.53\n",
+      "Average score (last 50 episodes): 174.10, avg qval: 1.80\n",
+      "Average score (last 50 episodes): 176.90, avg qval: 1.92\n",
+      "Average score (last 50 episodes): 158.90, avg qval: 1.84\n",
+      "Average score (last 50 episodes): 140.80, avg qval: 2.37\n",
+      "Average score (last 50 episodes): 156.20, avg qval: 1.88\n",
+      "Average score (last 50 episodes): 142.30, avg qval: 2.13\n",
+      "Average score (last 50 episodes): 153.80, avg qval: 1.56\n",
+      "Average score (last 50 episodes): 162.10, avg qval: 1.46\n",
+      "Average score (last 50 episodes): 165.20, avg qval: 1.23\n",
+      "Average score (last 50 episodes): 194.90, avg qval: 1.23\n",
+      "Average score (last 50 episodes): 152.50, avg qval: 1.44\n",
+      "Average score (last 50 episodes): 189.90, avg qval: 1.38\n",
+      "Average score (last 50 episodes): 219.00, avg qval: 1.05\n",
+      "Average score (last 50 episodes): 217.80, avg qval: 1.20\n",
+      "Average score (last 50 episodes): 217.50, avg qval: 1.47\n",
+      "Average score (last 50 episodes): 201.00, avg qval: 1.63\n",
+      "Average score (last 50 episodes): 247.50, avg qval: 1.73\n",
+      "Average score (last 50 episodes): 233.70, avg qval: 1.89\n"
      ]
     }
    ],
@@ -417,7 +450,7 @@
     "####THIS IS THE MAIN TRAINING CODE\n",
     "itters=0\n",
     "#itters=load(policy_net)\n",
-    "select_action_every_N_frames = 3\n",
+    "select_action_every_N_frames = 1\n",
     "from skimage.color import rgb2gray\n",
     "from skimage.transform import rescale\n",
     "import numpy as np\n",
@@ -429,8 +462,6 @@
     "else:\n",
     "    num_episodes = 50\n",
     "\n",
-    "rewards = []\n",
-    "avg_qvals = []\n",
     "try:\n",
     "    progress_bar = tqdm(range(num_episodes), unit='episode')\n",
     "    for i_episode in progress_bar:\n",
@@ -483,14 +514,14 @@
     "\n",
     "                # Soft update of the target network's weights\n",
     "                # θ′ ← τ θ + (1 −τ )θ′\n",
-    "                #target_net_state_dict = target_net.state_dict()\n",
-    "                #policy_net_state_dict = policy_net.state_dict()\n",
-    "                #for key in policy_net_state_dict:\n",
-    "                    #target_net_state_dict[key] = policy_net_state_dict[key]*TAU + target_net_state_dict[key]*(1-TAU)\n",
-    "                #target_net.load_state_dict(target_net_state_dict)\n",
-    "            if itters % 1000 == 0:\n",
-    "                        progress_bar.set_description(\"t = {}, eps = {}, updating = {}\".format(itters,(EPS_START + (EPS_START - EPS_END) * \\\n",
-    "        (-1 * itters / EPS_DECAY)), itters > replay_start_size))\n",
+    "                target_net_state_dict = target_net.state_dict()\n",
+    "                policy_net_state_dict = policy_net.state_dict()\n",
+    "                for key in policy_net_state_dict:\n",
+    "                    target_net_state_dict[key] = policy_net_state_dict[key]*TAU + target_net_state_dict[key]*(1-TAU)\n",
+    "                target_net.load_state_dict(target_net_state_dict)\n",
+    "            if itters % 5000 == 0:\n",
+    "                        progress_bar.set_description(\"t = {}, eps = {}, updating = {}\".format(itters,max(EPS_START + (EPS_START - EPS_END) * \\\n",
+    "        (-1 * itters / EPS_DECAY),EPS_END), itters > replay_start_size))\n",
     "\n",
     "            if done:\n",
     "                avg_qval_for_this_episode = avg_qval_for_this_episode/qvals_added\n",
@@ -506,22 +537,23 @@
     "except KeyboardInterrupt:\n",
     "    if 1==1:\n",
     "        print(\"Saving model before quitting...\")\n",
-    "        save(policy_net,itters)\n",
+    "        \n",
     "    env.close()\n",
-    "\n",
+    "save(policy_net,itters,avg_qvals,rewards)\n",
     "print('Complete')\n",
     "plot_durations(rewards,show_result=True,y_axis_name=\"Average Score Per Episode\")\n",
     "plt.ioff()\n",
     "plt.show()\n",
     "plot_durations(avg_qvals,show_result=True,y_axis_name=\"Average Action Value (Q)\")\n",
     "plt.ioff()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "np.save"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8832c626",
+   "id": "e09c26eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -529,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c997b73",
+   "id": "045a32f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "594dd132",
+   "id": "7dcab95b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -635,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e1865d",
+   "id": "b9b82172",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -643,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6295ce",
+   "id": "4dbddbe7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -651,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e434fa52",
+   "id": "d7bcbbb0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -659,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a6784f",
+   "id": "34168f28",
    "metadata": {},
    "outputs": [],
    "source": []
